// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner renders the component 1`] = `
<div>
  <div
    class="bber-spinner bber-spinner--visible"
  >
    <div
      class="bber-spinner__detail"
    />
  </div>
</div>
`;

exports[`Spinner renders the component 2`] = `
<div>
  <div
    class="bber-spinner"
  >
    <div
      class="bber-spinner__detail"
    />
  </div>
</div>
`;
